spacing correct

--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ h6{
   background-color: #e7c07c;
 }
 
-.scheduleblock{
+.scheduleblock h2{
   letter-spacing: 7px;
 }
 
